# chat-with-doc

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: rag_pipeline_eval.ipynb
src/: config.py  debug_config.py  document_processing.py  helper.py  logger.py  models.py  promt_chain.py  rag_chain.py  user_interface.py  vector_db.py  vector_store.py  web_page_retrieval.py
